# noir_android

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/noirandroid/testapp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
lib/: build.gradle.kts
lib/src/main/java/com/noirandroid/lib/: Circuit.kt  Noir.java  Noir.kt  Proof.kt
lib/src/main/java/noir_java/: Cargo.toml  README.md  android-toolchain.cmake  build-android.sh  setup-android-ndk.sh
lib/src/main/java/noir_java/.cargo/: config.toml
lib/src/main/java/noir_java/src/: lib.rs  noir_tests.rs  test_utils.rs
scripts/: clean.sh
