[package]
name = "noir_java"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "noir_java"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
noir_rs = { git = "https://github.com/zkpassport/noir_rs.git", tag = "v1.0.0-beta.14-2", features = ["barretenberg","android-compat"] }
hex = "0.4.3"
log = "0.4"
android_logger = "0.13"
env_logger = "0.10"